prevented content jumping

--- a/src/app.css
+++ b/src/app.css
@@ -8,3 +8,7 @@ html {
 body {
 	@apply h-full;
 }
+
+* {
+	scrollbar-gutter: stable;
+}
